# deriving-th

./: .gitignore  README.md  cabal.project  deriving-th.cabal  shell.nix  validate
.github/workflows/: validate.yml
aeson/: LICENSE  deriving-th-aeson.cabal
aeson/src/DerivingTH/: Aeson.hs
aeson/test/: Main.hs
src/: DerivingTH.hs
src/DerivingTH/: Class.hs  Internal.hs
test/: Foo.hs  Main.hs
