cabal-version: 3.0

name:           deriving-th
version:        0.1.0.0
synopsis:       A proof of concept GHC plugin for template haskell based deriving.
description:    Please see the README on GitHub at <https://github.com/ElderEphemera/deriving-th#readme>
category:       Compiler Plugin
homepage:       https://github.com/ElderEphemera/deriving-th#readme
bug-reports:    https://github.com/ElderEphemera/deriving-th/issues
author:         Joshua Price
maintainer:     elderephemera@gmail.com
copyright:      Copyright (c) 2022, Joshua Price
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/ElderEphemera/deriving-th

flag validate
  description: Enable extra compilation checks
  default: False
  manual: True

common common
  ghc-options: -Wall
  if flag(validate)
    ghc-options: -Werror -dcore-lint -fforce-recomp
  build-depends:
    base >= 4.14.0 && < 4.17,
    template-haskell >= 2.16.0 && < 2.19,
  default-language: Haskell2010

library
  import: common
  exposed-modules:
    DerivingTH
    DerivingTH.Class
    DerivingTH.Internal
  hs-source-dirs: src
  build-depends:
    ghc >= 8.10.1 && < 9.3,
    syb >= 0.7.2 && < 0.8,

test-suite deriving-th-test
  import: common
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Foo
  build-depends:
    deriving-th,
