cabal-version: 3.0

name:           deriving-th-aeson
version:        0.1.0.0
synopsis:       Orphan instances and wrappers for interfacing deriving-th with aeson
description:    Please see the README on GitHub at <https://github.com/ElderEphemera/deriving-th#readme>
category:       Plugin JSON
homepage:       https://github.com/ElderEphemera/deriving-th#readme
bug-reports:    https://github.com/ElderEphemera/deriving-th/issues
author:         Joshua Price
maintainer:     elderephemera@gmail.com
copyright:      Copyright (c) 2022, Joshua Price
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/ElderEphemera/deriving-th
  subdir: aeson

library
  exposed-modules:
    DerivingTH.Aeson
  hs-source-dirs: src
  build-depends:
    aeson >= 2.0.3.0 && < 2.1,
    base >= 4.14.0 && < 4.17,
    deriving-th >= 0.1.0 && < 0.2,
  ghc-options: -Wall -Wno-orphans
  default-language: Haskell2010
