cabal-version: 3.0

name:           deriving-th-aeson
version:        0.1.0.0
synopsis:       Orphan instances and wrappers for interfacing deriving-th with aeson
description:    Please see the README on GitHub at <https://github.com/ElderEphemera/deriving-th#readme>
category:       Plugin JSON
homepage:       https://github.com/ElderEphemera/deriving-th#readme
bug-reports:    https://github.com/ElderEphemera/deriving-th/issues
author:         Joshua Price
maintainer:     elderephemera@gmail.com
copyright:      Copyright (c) 2022, Joshua Price
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/ElderEphemera/deriving-th
  subdir: aeson

flag validate
  description: Enable extra compilation checks
  default: False
  manual: True

common common
  ghc-options:
    -Weverything
    -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction -Wno-missing-local-signatures
    -Wno-missing-import-lists -Wno-implicit-prelude
    -Wno-missed-specialisations -Wno-all-missed-specialisations
  if impl(ghc >= 9.2.1)
    ghc-options: -Wno-missing-kind-signatures
  if flag(validate)
    ghc-options: -Werror -dcore-lint -fforce-recomp
  build-depends:
    aeson >= 2.0.3.0 && < 2.1,
    base >= 4.14.0 && < 4.17,
    deriving-th >= 0.1.0 && < 0.2,
  default-language: Haskell2010

library
  import: common
  exposed-modules:
    DerivingTH.Aeson
  hs-source-dirs: src
  ghc-options: -Wno-orphans

test-suite deriving-th-aeson-test
  import: common
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    bytestring >= 0.10.12.0 && < 0.12,
    deriving-th-aeson,
    HUnit >= 1.6.2.0 && < 1.7,
